# DeepVerify

./: CITATION.cff  README.md  env.sample  pyproject.toml
deepverify/: cache.py  config.py  datamodels.py  pretty.py  utils.py
deepverify/agents/basic/: react_agent.py  workflow_fixed.py  workflow_mars.py
deepverify/agents/deepresearch/: deepresearch.py  deepresearch_oai.py  pretty.py  ptest_suite.py
deepverify/agents/dspy_basic/: mars.py  pipeline.py
deepverify/agents/jdr/: jdr.py  jdr_oai.py  notools_prompt.md  pretty.py  ptest_suite.py  simple_prompt.md
deepverify/mcp/: server.py  utils.py
deepverify/mcp/scratch/: rest_wrapper.py
deepverify/prompts/: __init__.py  decompose.md  evidence_extractor.md  evidence_filter.md  query_generator.md  question_answerer.md
deepverify/tools/lit_review/: generate_queries.py  get_journal_rank.py  read_pdf.py  read_url.py  search_crossref.py  search_google.py  search_google_scholar.py
deepverify/tools/promptrunner/: cache.py  promptrunner.py  utils.py
deepverify/tools/reasoning/: decompose.py  evidence_extraction.py  evidence_filter.py  mars.py  run_python.py  (+1 more)
mars/: README.md  requirements.txt
mars/dataset/: concrete_claim1.txt  concrete_claim2.txt  concrete_claim3.txt  concrete_claim4.txt  concrete_claim5.txt  concrete_claim6.txt  example_claim.txt  example_evidence_statements.txt  example_subclaims.txt  uhpc0_claim.txt  uhpc0_evidence_document.txt
mars/mars/: __init__.py  create_evidence_with_LM.py  evaluate.py  evidence_format_transformation.py  main.py  models.py  prompt_generation.py  simple.py  utils.py
(+6 files in other folders)
